test/number/trailing_dot.lox
// error: expect property name after '.'
123. () // () just to prevent '\n' being in the err msg
